--- a/Starter.html
+++ b/Starter.html
@@ -4,7 +4,7 @@
 <html>
 <head>
 <script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
-<link rel="stylesheet" type="text/css" href="FinalProject.css">
+<link rel="stylesheet" type="text/css" href="StarterStyle.css">
 <title>Airplane Model Comparison Tool</title>
 
 <body>
