--- a/Starter.html
+++ b/Starter.html
@@ -4,7 +4,9 @@
 <html>
 <head>
 <script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
-<link rel="stylesheet" type="text/css" href="StarterStyle.css">
+<script src="a4.js"></script>
+
+<link rel="stylesheet" type="text/css" href="FinalProject.css">
 <title>Airplane Model Comparison Tool</title>
 
 <body>
@@ -12,6 +14,13 @@
 
 <div id="buttons-container">
 
+
+<button class="button">Models</button>
+
+
+<button class="button">Map</button>
+
+<!-- 
 <div class="overlay-container">    
 <button class="button" id="Boeing737"></button>
 <div class="overlay">
@@ -38,7 +47,7 @@
 <div class="overlay">
     <div class="text">Boeing 747</div>
 </div>
-</div>
+</div> -->
 
 </div>
 
