--- a/Starter.html
+++ b/Starter.html
@@ -4,7 +4,7 @@
 <html>
 <head>
 <script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
-<script src="a4.js"></script>
+<script src="FinalProject.js"></script>
 
 <link rel="stylesheet" type="text/css" href="FinalProject.css">
 <title>Airplane Model Comparison Tool</title>
