--- a/Starter.html
+++ b/Starter.html
@@ -4,7 +4,7 @@
 <head>
   <script src="http://www.cs.unc.edu/~kmp/comp426fall18/jquery-3.3.1.js"></script>
   <script src="api.js"></script>
-  <script src="finproj.js"></script>
+  <script src="starter.js"></script>
 
   <link rel="stylesheet" type="text/css" href="FinalProject.css">
 </head>
