--- a/Starter.html
+++ b/Starter.html
@@ -15,7 +15,7 @@
   <h1 id="pageTitle">Airplane Model Comparison Tool</h1>
 
   <div id="buttons-container">
-    <button class="button" onclick="buildModelInterface()">Models</button>
+    <button class="button" onclick="buildModelsInterface()">Models</button>
     <button class="button" onclick="buildMapInterface()">Airports</button>
   </div>
 
