--- a/Starter.html
+++ b/Starter.html
@@ -11,12 +11,15 @@
 <title>Airplane Model Comparison Tool</title>
 
 <body>
+  <img id="image" src="planeMouse.png"/>
   <h1 id="pageTitle">Airplane Model Comparison Tool</h1>
 
   <div id="buttons-container">
     <button class="button" onclick="buildModelsInterface()">Models</button>
     <button class="button" onclick="buildAirportsInterface()">Airports</button>
   </div>
+
+  <footer><p>Created by Roman Rogowski, Caroline Lu, and Dominique Jabbour - 2018</p></footer>
 
   </body>
 
