--- a/Starter.html
+++ b/Starter.html
@@ -12,7 +12,7 @@
 
 <body>
   <img id="image" src="planeMouse.png"/>
-  <h1 id="pageTitle">Airplane Model Comparison Tool</h1>
+  <h1 id="pageTitle">Perfect Plane Picker 3000</h1>
 
   <div id="buttons-container">
     <button class="button" onclick="buildModelsInterface()">Models</button>
